@@ -3992,7 +3992,7 @@ free_written_common (struct written_common *w)
 /* Write a common block to the module -- recursive helper function.  */
 
 static void
-write_common_0 (gfc_symtree *st)
+write_common_0 (gfc_symtree *st, bool this_module)
 {
   gfc_common_head *p;
   const char * name;
@@ -4004,7 +4004,7 @@ write_common_0 (gfc_symtree *st)
   if (st == NULL)
     return;
 
-  write_common_0 (st->left);
+  write_common_0 (st->left, this_module);
 
   /* We will write out the binding label, or the name if no label given.  */
   name = st->n.common->name;
@@ -4022,6 +4022,10 @@ write_common_0 (gfc_symtree *st)
 
       w = (c < 0) ? w->left : w->right;
     }
+
+  /* Give priority to commons that are not use associated.  */
+  if (this_module && p->use_assoc)
+    write_me = false;
 
   if (write_me)
     {
@@ -4043,12 +4047,12 @@ write_common_0 (gfc_symtree *st)
 
       /* Record that we have written this common.  */
       w = gfc_getmem (sizeof (struct written_common));
-      w->name = name;
       w->label = label;
+      w->name = name;
       gfc_insert_bbt (&written_commons, w, compare_written_commons);
     }
 
-  write_common_0 (st->right);
+  write_common_0 (st->right, this_module);
 }
 
 
@@ -4059,7 +4063,8 @@ static void
 write_common (gfc_symtree *st)
 {
   written_commons = NULL;
-  write_common_0 (st);
+  write_common_0 (st, true);
+  write_common_0 (st, false);
   free_written_common (written_commons);
   written_commons = NULL;
 }
